--- a/popup.css
+++ b/popup.css
@@ -1,63 +1,50 @@
-.header {
-    padding: 60px;
-    text-align: center;
-    background: #1abc9c;
-    color: white;
-    font-size: 30px;
-  }
+body {
+  font-family: Arial, sans-serif;
+  padding: 15px;
+  width: 250px;
+  background-color: darkgray;
+  border-radius: 50% 25%;
+   
+  
+}
 
-/* The switch - the box around the slider */
-      .switch {
-        position: relative;
-        display: inline-block;
-        width: 60px;
-        height: 34px;
-      }
-      .switch input { 
-        opacity: 0;
-        width: 0;
-        height: 0;
-      }
-      .slider {
-        position: absolute;
-        cursor: pointer;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-color: #ccc;
-        -webkit-transition: .4s;
-        transition: .4s;
-      }
-      .slider:before {
-        position: absolute;
-        content: "";
-        height: 26px;
-        width: 26px;
-        left: 34px;
-        bottom: 4px;
-        background-color: white;
-        -webkit-transition: .4s;
-        transition: .4s;
-      }
-      input:checked + .slider {
-        background-color: #2196F3;
-      }
-      input:focus + .slider {
-        box-shadow: 0 0 1px #2196F3;
-      }
-      input:checked + .slider:before {
-        -webkit-transform: translateX(-26px);
-        -ms-transform: translateX(-26px);
-        transform: translateX(-26px);
-      }
-      .slider.round {
-        border-radius: 34px;
-      }
-      .slider.round:before {
-        border-radius: 50%;
-      }
-      #status {
-        margin-top: 10px;
-      }
-    
+
+header {
+  display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+}
+
+a {
+  color: black;
+  font-size: large;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+label {
+  font-size: medium;
+}
+
+#github-icon {
+  width: 24px;
+  height: 24px;
+  vertical-align: sub;
+}
+
+.toggle-section {
+  margin: 10px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#bottom {
+  margin-bottom: 30px;
+}
+
+#status {
+  color: green;
+  margin-top: 10px;
+}
