--- a/popup.css
+++ b/popup.css
@@ -3,7 +3,7 @@ body {
   padding: 15px;
   width: 250px;
   background-color: darkgray;
-  border-radius: 50% 25%;
+
    
   
 }
@@ -15,6 +15,8 @@ header {
     align-items: center;
     height: 50px;
 }
+
+body.groove {border-style: groove;}
 
 a {
   color: black;
